<resources>
    <string name="app_name">Jhasp Travel</string>

    <!--NFC-->
    <string name="message_write_tag">Write to NFC Tag</string>
    <string name="message_tap_tag">Tap the NFC Tag to your device !</string>

    <!--TEMAS-->
    <string name="verificar_temas">Algunos widgets para verificar los colores del tema</string>
    <string name="cambiar_titulo">Cambiar título de widget</string>
    <string name="titulo_checkbox">Título del widget CheckBox</string>
    <string name="titulo_radiobutton">Título de widget de RadioButton</string>
    <string name="ajustes_avanzados">Ajustes avanzados</string>
    <string name="elegir_tema">Elige el tema de la aplicación</string>
    <string name="texto_presionar">Presione para cambiar los colores primario, oscuro y acento primario</string>
    <string name="facebook_id">Facebook ID</string>
    <string name="descripcion">Descripcion</string>
    <!--MENU DIALOGO ACERCA-->
    <string name="acerca">Acerca de</string>
    <string name="acerca_1">Pasaje RFI App, es una aplicación diseñada por Johan Sebastian Parra Alvira</string>
    <string name="diseñado">Diseñado por: www.facebook.com/johansparra</string>
    <string name="configuracion">Configuracion</string>

    <!--MENU-->
    <string name="limpiar">Limpiar Memoria</string>
    <string name="logout">Cerrar Sesión</string>
    <!-- ACTIVITY_TEMAS-->
    <string name="elegir_color_tema">Elige el color del tema</string>
    <string name="rojo">Rojo</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="rosado">Rosado</string>
    <string name="naranja">Naranja</string>
    <string name="cafe">Cafe</string>
    <string name="gris">Gris</string>
    <string name="azul_oscuro">Azul Oscuro</string>
    <string name="morado">Morado</string>
    <string name="azul_claro">Azul Claro</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <!-- ACTIVITY_LOGIN-->
    <string name="bienvenido">Bienvenido</string>
    <string name="Digitesucontraseña">Password</string>
    <string name="Digitesuemail">Email</string>
    <string name="Entrar">Iniciar Sesión</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="inicio_sesion">Inicio Sesión</string>
 <!--   <string name="error_mensaje_conexion">Error de conexión No Hay internet! </string>-->
    <!--ACTIVITY  REGISTRO-->
    <string name="registro">Registro</string>
    <string name="identificacion">Seleccione el tipo de identificación</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="fecha_naci">Fecha de Nacimiento</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>

    <string-array name="tipo_identificacion">
        <item>Seleccione el tipo de identificación</item>
        <item>Cedula</item>
        <item>NIT</item>
        <item>Pasaporte</item>
        <item>Tarjeta de Identificación</item>
        <item>Cedula extranjera</item>
    </string-array>

    <!--ACTIVITY CUENTA-->
    <string name="cuenta">Cuenta</string>
    <string name="Nombrel1">Nombre:</string>
    <string name="Emaill1">Email:</string>
    <string name="Cedulal1">Cédula:</string>
    <string name="Fotol11">Foto:</string>
    <string name="Cargol1">Cargo:</string>
    <string name="acavalacedula1">Aca" "va " "la" "cedula</string>
    <string name="acavaelnombre1">Aca" "va " "el" "nombre</string>
    <string name="acavaelemail1">Aca" "va " "el" "email</string>
    <string name="acavaelcargo1">Aca" "va " "el" "cargo</string>
    <string name="acavalafoto1">Aca" "va " "la" "foto</string>
    <string name="nombre_fb">Nombre Facebook:</string>
    <string name="acavaelnombre2">Aca va el nombre FB</string>
    <string name="recargaPerfil">recarga</string>
    <string name="titulo_valor_ultima_recarga">Valor Ultima Recarga:</string>
    <string name="valor_ultima_recarga">$</string>
    <string name="titulo_fecha_recarga">Fecha Recarga:</string>
    <string name="fecha_recarga">00/00/0000 0:00:00</string>

    <!--MAIN MAPS-->
    <string name="estoy_aqui">Estoy aqui</string>
    <string name="panoramica">Panoramica</string>

    <!--DRAWER-->
    <string name="perfil">Perfil</string>
    <string name="pago">Pago Transmilenio</string>
    <string name="recargar">Recargar Tarjeta</string>
    <string name="nombre">Bienvenido</string>
    <string name="correo">App NFC</string>
    <string name="inicio">Inicio</string>

    <string name="opciones">Opciones</string>
    <string name="nose">No se todavia en blanco</string>
    <string name="configuracion_1">Configuración</string>
    <string name="Imagencargada">Imagen Cargada</string>


    <string name="gps">GPS</string>
    <string name="googlemaps">Google Maps</string>

    <!--ACTIVITY  HISTORIAL RECARGAS-->
    <string name="recargarTarjeta">Recargar"    "</string>
    <string name="valorRecarga">valor recarga"    "</string>


    <!--    &lt;!&ndash;FACEBOOK&ndash;&gt;
        <string name="facebook_app_id">324584154732775</string>
        <string name="fb_login_protocol_scheme">fb324584154732775</string>-->

    <!-- <string name="welcome">Bienvenido</string>
     <string name="cancel_login">Se canceló la operación</string>
     <string name="error_login">Ocurrió un error al ingresar</string>
     <string name="logout1">Cerrar sesión</string>
     <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>-->

    <!--GOOGLE MAPS-->
    <!--   <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
AIzaSyBzIyAhKl-Vk1OdwknsPZUeu5wAcZp9J80
</string>-->

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBVzMzlBm_m4KN1mKXya3lH1_1SoDBGZus</string>

    <!--MAIN MAPS-->
    <string name="mapa">Mapa</string>
    <string name="satellite">Satelite</string>
    <string name="hibrido">Hibrido</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_login2">Sign in</string>

    <!--     &lt;!&ndash; Strings related to login &ndash;&gt;
       <string name="prompt_email">Email</string>
       <string name="action_sign_in">Sign in or register</string>
       <string name="action_sign_in_short">Sign in</string>
       <string name="error_invalid_email">This email address is invalid</string>

       <string name="error_invalid_password">This password is too short</string>
       <string name="error_incorrect_password">This password is incorrect</string>
       <string name="error_field_required">This field is required</string>
       <string name="permission_rationale">"Contacts permissions are needed for providing email
           completions."
       </string>-->

    <!--LIMPIAR MEMORIA-->
    <string name="texto_limpiar">Memoria Limpiada</string>
    <string name="historial">Historial Pagos Transmilenio</string>
    <!--ERRORES-->
    <string name="error_campo">Error campo vacio</string>
    <string name="error_seleccion_identificacion">Seleccione un tipo de Identificación</string>
    <string name="error_nombre_menor">Debe tener mas de " "</string>
    <string name="error_caracteres">" "caracteres</string>
    <string name="error_nombre_numero">El campo no puede contener números</string>
    <string name="error_network_timeout">Error tiempo de respuesta fallida</string>
    <string name="error_invalid_email_di">Email invalido</string>

    <!--CREDIT CARD-->
    <string name="next">SIGUIENTE</string>
    <string name="previous">ATRAS</string>
    <string name="done">FINALIZAR</string>
    <string name="card_holder_name_sample">NOMBRE</string>
    <string name="card_holder">NOMBRE DEL TITULAR</string>
    <string name="expiry">VÁLIDA HASTA</string>
    <string name="mm_yy">MM/YY</string>
    <string name="card_expiry">VÁLIDA HASTA</string>
    <string name="card_mm_yy">MM/YY</string>
    <string name="hint_cvv_front">0000</string>
    <string name="name_on_card">NOMBRE DEL TITULAR</string>
    <string name="card_number">NÚMERO DE TARJETA</string>
    <string name="error_invalid_month">Mes Inválido</string>
    <string name="error_card_expired">Año Inválido</string>
    <integer name="card_name_len">20</integer>
    <string name="title_activity_prueba">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>



</resources>
