<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_navigation_drawer_cuenta"
            android:icon="@drawable/ic_login"
            android:title="@string/cuenta" />
        <item
            android:id="@+id/item_navigation_drawer_nfc"
            android:icon="@drawable/ic_pago"
            android:visible="true"
            android:title="@string/pago" />
        <item
            android:id="@+id/item_navigation_drawer_recargar"
            android:icon="@drawable/ic_recarga"
            android:visible="true"
            android:title="@string/recargar" />
        <item
            android:id="@+id/item_navigation_drawer_historial"
            android:icon="@drawable/ic_historial"
            android:visible="true"
            android:title="@string/historial" />
    </group>

    <item android:title="@string/opciones">
        <menu>
            <item
                android:id="@+id/item_navigation_drawer_configuracion"
                android:icon="@drawable/ic_action_action_settings"
                android:title="@string/configuracion_1" />
            <item
                android:id="@+id/item_navigation_drawer_maps"
                android:icon="@drawable/ic_ubicacion"
                android:title="@string/googlemaps" />
            <item
                android:id="@+id/item_navigation_drawer_acercade"
                android:icon="@drawable/ic_acera_menu"
                android:title="@string/acerca" />
        </menu>
    </item>

</menu>