<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingsActivity">

    <item android:id="@+id/action_configuracion"
        android:title="@string/configuracion"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_limpiar"
        android:title="@string/limpiar"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout_firebase"
        android:title="@string/logout_fire"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
