<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/dialogLayout"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:background="@color/md_white_1000"
android:orientation="vertical"
android:weightSum="1">

<TextView
    android:id="@+id/textViewThemeDialogTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginTop="24dp"
    android:text="@string/elegir_color_tema"
    android:layout_marginBottom="16dp"
    android:textAppearance="@style/TextAppearance.AppCompat.Title"
    android:textColor="@color/md_text" />

<FrameLayout
    android:background="@color/md_divider"
    android:layout_width="match_parent"
    android:layout_height="1dp"/>


<ScrollView
    android:scrollbars="vertical"
    android:scrollbarThumbVertical="@drawable/scrollbar"
    android:clipToPadding="true"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="0dip"
    android:layout_weight="1">

    <RelativeLayout
        android:id="@+id/relativeLayoutCardViews"
        android:layout_width="wrap_content"
        android:background="@color/md_text_white"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_centerHorizontal="true"
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/md_text_white"
            android:columnCount="2"
            android:rowCount="5">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:stateListAnimator="@animator/anim_aumento"
                card_view:cardBackgroundColor="@color/md_teal_800"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp" android:focusable="true">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/verde"
                    android:textColor="@color/md_text_white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:stateListAnimator="@animator/anim_aumento"
                card_view:cardBackgroundColor="@color/md_blue_400"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp" android:focusable="true">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/azul"
                    android:textColor="@color/md_text_white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:layout_column="0"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:stateListAnimator="@animator/anim_aumento"
                card_view:cardBackgroundColor="@color/md_red_400"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp" android:focusable="true">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/rojo"
                    android:textColor="@color/md_text_white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:stateListAnimator="@animator/anim_aumento"
                card_view:cardBackgroundColor="@color/md_orange_400"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp" android:focusable="true">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/naranja"
                    android:textColor="@color/md_text_white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:stateListAnimator="@animator/anim_aumento"
                card_view:cardBackgroundColor="@color/md_pink_400"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp" android:focusable="true">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/rosado"
                    android:textColor="@color/md_text_white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_column="1"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:stateListAnimator="@animator/anim_aumento"
                card_view:cardBackgroundColor="@color/md_indigo_400"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp" android:focusable="true">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/morado"
                    android:textColor="@color/md_text_white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:layout_column="0"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:stateListAnimator="@animator/anim_aumento"
                card_view:cardBackgroundColor="@color/md_brown_400"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp" android:focusable="true">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/cafe"
                    android:textColor="@color/md_text_white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:layout_column="1"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:stateListAnimator="@animator/anim_aumento"
                card_view:cardBackgroundColor="@color/md_blue_grey_400"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp" android:focusable="true">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/gris"
                    android:textColor="@color/md_text_white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_column="0"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:stateListAnimator="@animator/anim_aumento"
                card_view:cardBackgroundColor="@color/md_falcon_400"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp" android:focusable="true">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/azul_oscuro"
                    android:textColor="@color/md_text_white" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="24dp"
                android:layout_column="1"
                android:clickable="true"
                android:foreground="?selectableItemBackground"
                android:stateListAnimator="@animator/anim_aumento"
                card_view:cardBackgroundColor="@color/md_light_blue_400"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp" android:focusable="true">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="80dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/azul_claro"
                    android:textColor="@color/md_text_white" />
            </android.support.v7.widget.CardView>

        </GridLayout>

    </RelativeLayout>
</ScrollView>

<FrameLayout
    android:background="@color/md_divider"
    android:layout_width="match_parent"
    android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="207dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="24dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/buttonDisagree"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/boton_dialogo"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancelar"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="?attr/colorAccent" />
        <Space
            android:layout_width="16dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/buttonAgree"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:background="@drawable/boton_dialogo"
            android:clickable="true"

            android:focusable="true"
            android:text="@string/aceptar"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="?attr/colorAccent" />

    </LinearLayout>

<Space
    android:layout_width="match_parent"
    android:layout_height="8dp" />
</LinearLayout>


